fix: fix name alignment

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -16,7 +16,11 @@
   font-size: 16px;
   line-height: 26px;
   color: variables.$secondaryTextColor;
-  text-align: left;
+  text-align: center;
+
+  @media (min-width: variables.$mediumDeviceWidth) {
+    text-align: left;
+  }
 }
 
 .Home__HeadingsAndIllustration {
